<!--
  ~ Copyright the original author or authors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0">
  <modelVersion>4.0.0</modelVersion>

  <name>r2dbc-vertica</name>
  <description>
    An R2DBC driver for the Vertica database server.
  </description>
  <artifactId>r2dbc-vertica</artifactId>
  <packaging>jar</packaging>

  <groupId>com.github.michael-gillette</groupId>
  <version>${revision}${changelist}</version>

  <properties>
    <!-- Maven Properties -->
    <changelist>-SNAPSHOT</changelist>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <revision>0.0.1</revision>

    <!-- Dependency Versions -->
    <assertj.version>3.27.0</assertj.version>
    <error-prone.version>2.36.0</error-prone.version>
    <flatten-maven.version>1.6.0</flatten-maven.version>
    <java.version>1.8</java.version>
    <junit5.version>5.11.4</junit5.version>
    <maven-compiler.version>3.13.0</maven-compiler.version>
    <maven-enforcer.version>3.5.0</maven-enforcer.version>
    <maven-javadoc.version>3.11.2</maven-javadoc.version>
    <maven-source.version>3.3.1</maven-source.version>
    <maven-surefire.version>3.5.2</maven-surefire.version>
    <mockito.version>5.14.2</mockito.version>
    <r2dbc-spi.version>1.0.0.RELEASE</r2dbc-spi.version>
    <reactor.version>3.7.1</reactor.version>
    <reactor-netty.version>1.2.1</reactor-netty.version>
    <spring.version>5.3.32</spring.version>
    <vertica.version>24.4.0-0</vertica.version>
  </properties>

  <dependencies>
    <!-- Compile -->
    <dependency>
      <groupId>io.r2dbc</groupId>
      <artifactId>r2dbc-spi</artifactId>
      <version>${r2dbc-spi.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.projectreactor</groupId>
      <artifactId>reactor-core</artifactId>
      <version>${reactor.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.projectreactor.netty</groupId>
      <artifactId>reactor-netty-core</artifactId>
      <version>${reactor-netty.version}</version>
      <scope>compile</scope>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit5.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit5.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.r2dbc</groupId>
      <artifactId>r2dbc-spi-test</artifactId>
      <version>${r2dbc-spi.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.projectreactor</groupId>
      <artifactId>reactor-test</artifactId>
      <version>${reactor.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jdbc</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.vertica.jdbc</groupId>
      <artifactId>vertica-jdbc</artifactId>
      <version>${vertica.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Provided -->
    <dependency>
      <groupId>com.google.errorprone</groupId>
      <artifactId>error_prone_annotations</artifactId>
      <version>${error-prone.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>${flatten-maven.version}</version>
        <configuration>
          <flattenMode>oss</flattenMode>
          <outputDirectory>${project.build.directory}</outputDirectory>
          <pomElements>
            <properties>remove</properties>
          </pomElements>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals><goal>flatten</goal></goals>
          </execution>
          <execution>
            <id>flatten-clean</id>
            <phase>clean</phase>
            <goals><goal>clean</goal></goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler.version}</version>
        <configuration>
          <compilerArgs>
            <arg>-Xlint:all</arg>
            <!-- ErrorProne -->
            <arg>-XDcompilePolicy=simple</arg>
            <arg>--should-stop=ifError=FLOW</arg>
            <arg>
              -Xplugin:ErrorProne
              -XepAllDisabledChecksAsWarnings
              -Xep:FieldCanBeLocal:OFF
              -Xep:ImmutableMemberCollection:OFF
              -Xep:Java7ApiChecker:OFF
              -Xep:IdentifierName:OFF
              -Xep:UnusedVariable:OFF
              -Xep:Varifier:OFF
            </arg>
          </compilerArgs>
          <showWarnings>true</showWarnings>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <groupId>com.google.errorprone</groupId>
              <artifactId>error_prone_core</artifactId>
              <version>${error-prone.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${maven-enforcer.version}</version>
        <executions>
          <execution>
            <id>enforce-rules</id>
            <goals><goal>enforce</goal></goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>[11,)</version>
                </requireJavaVersion>
                <requireMavenVersion>
                  <version>[3.6.0,)</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc.version}</version>
        <configuration>
          <links>
            <link>https://r2dbc.io/spec/${r2dbc-spi.version}/api/</link>
            <link>https://projectreactor.io/docs/core/release/api/</link>
            <link>https://www.reactive-streams.org/reactive-streams-1.0.3-javadoc/</link>
          </links>
        </configuration>
        <executions>
          <execution>
            <id>attach</id>
            <goals><goal>jar</goal></goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source.version}</version>
        <executions>
          <execution>
            <id>attach</id>
            <goals><goal>jar</goal></goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire.version}</version>
      </plugin>
    </plugins>
  </build>
</project>
